# wininit-api-comparison

./: .gitignore  Cargo.toml  README.md
src/: main.rs
web/: Cargo.toml  index.html
web/common/: Cargo.toml
web/common/src/: lib.rs
web/new-api/: Cargo.toml
web/new-api/src/: lib.rs
web/old-api/: Cargo.toml
web/old-api/src/: lib.rs
