[workspace]
resolver = "2"

members = [ "old-api", "new-api", "common"]

[workspace.dependencies]
log = "0.4.22"
wgpu = { version = "22.1.0", default-features = false, features = ["webgl", "wgsl"] }
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
fern = "0.7.0"
wasm-bindgen = "0.2.95"
wasm-bindgen-futures = "0.4.45"
web-sys = { version = "0.3.72", features = ["Document", "Window", "Element", "Location"] }
