[package]
name = "common"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log.workspace = true
console_error_panic_hook.workspace = true
console_log.workspace = true
fern.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
wgpu = { workspace = true, default-features = false, features = ["webgl", "wgsl"] }
web-sys = { workspace = true, features = ["Location"] }
